# optimal-visual-servoing

./: .gitignore  CMakeLists.txt  README.md  package.xml
MATLAB transform validation/: cam_in_body.mat  process.m  subscribe.m
calibration/: charuco_calib.cpp
data/: scan-test.bag
data/meshes/: aruco.dae
data/urdf/: aruco.sdf  aruco.urdf
include/optimal_visual_servoing/: ArucoTagsDetection.h  CircleOfInterest.h  ClusterExtractor.h  DynamicWindow.h  DynamicWindowSampler.h  ErrorFunction.h  LaserSegmentation.h  Navigation.h  Optimization.h  OptimizationProblem.h  RobotFeasibleRegion.h  TagTrajectoryGenerator.h  Wrapper.h
launch/: spawn_ar_tracking.launch  spawn_robot_sdf.launch
params/: aruco_params.yaml  optimal_visual_servoing.yaml
src/: ArucoTagsDetection.cc  CircleOfInterest.cc  ClusterExtractor.cc  DetectArucoTags.cc  DynamicWindow.cc  DynamicWindowSampler.cc  LaserSegmentation.cc  Navigation.cc  Optimization.cc  OptimizationProblem  OptimizationProblem.cc  OptimizationProblem.h  RobotFeasibleRegion.cc  TagTrajectoryGenerator.cc  Wrapper.cc
